# procedural-terrain

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  point_light.hpp  settings.hpp  shader.hpp  terrain.hpp  water.hpp
lib/glad/: glad.c  glad.h
release-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  terrain.sln  terrain.vcxproj  terrain.vcxproj.filters
release-build/lib/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
release-build/lib/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
release-build/terrain.dir/Debug/: terrain.exe.recipe  terrain.ilk
release-build/terrain.dir/Debug/terrain.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
release-build/terrain.dir/Release/: terrain.exe.recipe
release-build/terrain.dir/Release/terrain.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  (+3 more)
shaders/: main.vert
shaders/terrain/: terrain.frag  terrain.geom  terrain.vert
shaders/water/: water.frag  water.geom  water.vert
src/: camera.cpp  main.cpp  point_light.cpp  settings.cpp  shader.cpp  terrain.cpp  water.cpp
(+28 files in other folders)
